<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="credentials_error">Email atau Password salah</string>
    <string name="log_out">Log Out</string>
    <string name="addStory_menu">Post Story</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text">Belum punya akun? Silahkan mendaftar </string>
    <string name="register_intent">disini</string>
    <string name="login_storyapp">Login StoryApp</string>
    <string name="login_text">Sudah punya akun? Silahkan login</string>
    <string name="register_storyapp">Register StoryApp</string>
    <string name="date">xx/xx/xxxx</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="shutter">Shutter</string>
    <string name="switch_camera">Switch</string>
    <string name="date_text_format">xx/xx/xxxx</string>
    <string name="detail_image">Detail Image</string>
    <string name="latitude_longitude">Latitude, Longitude</string>
    <string name="logo_lokasi">Logo Lokasi</string>
    <string name="map_detail_story">Map Detail Story</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>