<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin">

        <com.dickyarya.storyapp.component.NameEditText
            android:id="@+id/etName"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:drawableStart="@drawable/ic_costume_person"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black_app"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <com.dickyarya.storyapp.component.EmailEditText
            android:id="@+id/etEmail"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:drawableStart="@drawable/ic_costume_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black_app"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <com.dickyarya.storyapp.component.PasswordEditText
            android:id="@+id/etPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:background="@drawable/et_custom"
            android:drawableStart="@drawable/ic_costume_password"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="16"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black_app"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <com.dickyarya.storyapp.component.RegisterButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:background="@drawable/btn_costume"
            android:fontFamily="@font/outfit_bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/credentials_error"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lhRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/login_text"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLoginIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/register_intent"
            android:textColor="@color/blue_app_secondary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:alpha="0"
        android:contentDescription="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_vector2" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:alpha="0"
        android:fontFamily="@font/outfit"
        android:text="@string/register_storyapp"
        android:textColor="@color/black_app"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
